@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1170 2010-03-02 16:07:45 mb Exp $
+# $Id: CHANGES,v 1.1171 2010-03-08 13:35:27 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.5.0 beta1 (????/??/??)
+ - (2010/03/08) Fixed bug#5097 - AdminNotificationEvent does not display values
+    on Change.
  - (2010/02/26) Fixed bug#4874 - LDAP connection even if it is not needed.
     Moved to "Die => 0" as default value if no connection to customer ldap
     source was possible.
